--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
             <nav class="header__menu menu" id="mainNav" :class="menuIsOpen && 'menu--open'">
             <ul class="menu__list list-unstyled">
                 <ul class="langue">
-                    <li class="menu__item"><a class="menu__link__titre__langue" href="index.html">Fr</a></li>
-                    <li class="menu__item"><a class="menu__link__titre__langue" href="index_english.html">En</a></li>
+                    <li class="menu__item"><a class="menu__link__titre__langue" href="index.html">Fr.</a></li>
+                    <li class="menu__item"><a class="menu__link__titre__langue" href="index_english.html">En.</a></li>
                 </ul>
+
+                <div class="trait__menu"></div>
 
                 <li><a class="menu__link__titre">Nos articles</a></li>
                 <li class="menu__item"><a class="menu__link" href="Miley_Cyrus_,_la_nouvelle_féministe.html">Miley Cyrus: La  néo-féministe </a></li>
