--- a/404.html
+++ b/404.html
@@ -7,7 +7,9 @@
     <title>Erreur 404</title>
 </head>
 <body>
-    <h1>Cliquez <a href="index.html">ici</a> pour revenir à la page accueil</h1>
+    <h1>Oups... Je n'ai pas réussi à trouver cette page</h1>
+    <br>
+    <h2>Cliquez <a href="index.html">ici</a> pour revenir à la page accueil</h2>
     
 </body>
 </html>
