--- a/D_'_autres_projets.html
+++ b/D_'_autres_projets.html
@@ -109,7 +109,7 @@
                             <img src="img/Caroussel_autres_projets/theo.png" />
                             <div class="card-content">
                                 <p><br>Féminicité<br></p>
-                                <a href="#" class="button__caroussel">En lire plus</a>
+                                <a href="https://femicine.theopasquarelli.fr" class="button__caroussel">En lire plus</a>
                             </div>
                         </div>
                     </li>
@@ -129,7 +129,7 @@
                             <img src="img/Caroussel_autres_projets/hugo.png" />
                             <div class="card-content">
                                 <p>Feminism<br> Great Battles</p>
-                                <a href="#" class="button__caroussel">En lire plus</a>
+                                <a href="https://feminismgreatbattles.hrodrigues.fr" class="button__caroussel">En lire plus</a>
                             </div>
                         </div>
                     </li>
@@ -139,7 +139,7 @@
                             <img src="img/Caroussel_autres_projets/meldryck.png" />
                             <div class="card-content">
                                 <p><br>Pop-féminism</p>
-                                <a href="#" class="button__caroussel">En lire plus</a>
+                                <a href="https://pop-feminism.meldryck-s.fr/" class="button__caroussel">En lire plus</a>
                             </div>
                         </div>
                     </li>
@@ -149,7 +149,7 @@
                             <img src="img/Caroussel_autres_projets/valentin.png" />
                             <div class="card-content">
                                 <p><br>Olympe</p>
-                                <a href="#" class="button__caroussel">En lire plus</a>
+                                <a href="https://hungry-aryabhata-297231.netlify.app/index.html" class="button__caroussel">En lire plus</a>
                             </div>
                         </div>
                     </li>
@@ -159,7 +159,7 @@
                             <img src="img/Caroussel_autres_projets/david.png" />
                             <div class="card-content">
                                 <p><br>Be witchy</p>
-                                <a href="#" class="button__caroussel">En lire plus</a>
+                                <a href="https://witchy.davidsarkissian.fr/" class="button__caroussel">En lire plus</a>
                             </div>
                         </div>
                     </li>
@@ -169,7 +169,7 @@
                             <img src="img/Caroussel_autres_projets/marwin.png" />
                             <div class="card-content">
                                 <p>Le féminisme, <br>une guerre sans fin</p>
-                                <a href="#" class="button__caroussel">En lire plus</a>
+                                <a href="https://feminism.marwin-rodrigues.fr/" class="button__caroussel">En lire plus</a>
                             </div>
                         </div>
                     </li>
