--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               </a>
             </div>
 
-            <h2 class="introduction__header"> Pour mieux en connaître sur toutes et tous              
+            <h2 class="introduction__header"> Pour mieux en connaître sur toutes et tous!              
             </h2>
             <!-- Fin du formulaire de recherche -->
                     
