--- a/read_more_english.html
+++ b/read_more_english.html
@@ -164,14 +164,18 @@
             <h2 class="titre__section">Frieze</h2>
             <div class="trait__article"></div>
 
+            <img src="img/Ensavoirplus/frise_english.svg" class="frise">
+            
             <h2 class="titre__section">Interview</h2>
             <div class="trait__article"></div>
             <video class="video__youtube" width="375" height="240" controls>
-                <source src="" type=video/mp4>
+                <source src="video/interview__feminisme.mp4" type=video/mp4>
             </video>
 
             <h2 class="titre__section">Glossary</h2>
             <div class="trait__article"></div>
+
+            <img src="img/Ensavoirplus/glossaire__english.svg" class="glossaire">
         </main>
         <footer class="footer">
 
