--- a/Contact_english.html
+++ b/Contact_english.html
@@ -77,7 +77,7 @@
         </div>
 
         <a href="#" class="btn">
-          <img src="img/captcha.svg" class="captcha">
+          <img src="img/Contact/captcha.svg" class="captcha">
       </a>
       </main>
       <footer class="footer">
