--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
        
                 <article>
                     <h3 class="sous__titre__video__youtube" >Scéance de tir à la carabine par Niki de St Phalle.
-                        Nouveau moyen de peindre!
+                        Nouveau moyen de peindre
                    </h3>
 
                     <video class="video__youtube" width="375" height="240" controls>
