--- a/En_savoir_plus.html
+++ b/En_savoir_plus.html
@@ -166,7 +166,7 @@
 
             <img src="img/Ensavoirplus/frise.svg" class="frise">
             
-            <h2 class="titre__section">Interview</h2>
+            <h2 class="titre__section">Micro trottoir</h2>
             <div class="trait__article"></div>
             <video class="video__youtube" width="375" height="240" controls>
                 <source src="video/microtrottoirs_Saturni_PhillipeGalat_Wuillamier.mp4" type=video/mp4>
