--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <h3 class="footer__title">Mentions légales</h3>
                 <address class=footer__link__text>
                     <p class=footer__link__text> Projet réalisé dans le cadre d'un exercice pédagogique au département
-                        <a href="http://mmimontbeliard.com/">MMI de Montbéliard
+                        <a href="http://mmimontbeliard.com/">MMI de Montbéliard<img src="Icone/logo_mmi.svg" alt="Iconmmi">
                     </p>
                 </address>
 
