--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                     <a  href="Miley_Cyrus_,_la_nouvelle_féministe.html">
                         <h3 class="sous__titre__vignette">Entre propos choquant et osé, découvrez comment Miley Cyrus 
-                            est devenue une icône du féminisme
+                            est devenue une icône du féminisme.
                         </h3>
                     </a>
                 </article>
