--- a/Contact_english.html
+++ b/Contact_english.html
@@ -76,9 +76,9 @@
           </form>
         </div>
 
-        <a href="#" class="btn">
-          <img src="img/Contact/captcha.svg" class="captcha">
-      </a>
+        <a href="#" class="captcha">
+            <img src="img/Contact/captcha.png" class="captcha">
+        </a>
       </main>
       <footer class="footer">
 
