--- a/Contact.html
+++ b/Contact.html
@@ -76,8 +76,8 @@
           </form>
         </div>
 
-        <a href="#" class="btn">
-          <img src="img/Contact/captcha.svg" class="captcha">
+        <a href="#" class="captcha">
+          <img src="img/Contact/captcha.png" class="captcha">
       </a>
       </main>
       <footer class="footer">
