--- a/D_'_autres_projets.html
+++ b/D_'_autres_projets.html
@@ -119,7 +119,7 @@
                             <img src="img/Caroussel_autres_projets/jonas.png" />
                             <div class="card-content">
                                 <p>France<br> féminisme</p>
-                                <a href="www.philippe-gallat.com" class="button__caroussel">En lire plus</a>
+                                <a href="https://www.philippe-gallat.com" class="button__caroussel">En lire plus</a>
                             </div>
                         </div>
                     </li>
