--- a/index_english.html
+++ b/index_english.html
@@ -84,7 +84,7 @@
                         <img  src="img/page_accueuil/Miley_Cyrus.webp" alt="Miley Cyrus" class="img2">
                     </a>
 
-                    <a  href="Miley_Cyrus_,_la_nouvelle_féministe.html">
+                    <a  href="Miley_Cyrus_ The_neo_feminist_english.html">
                         <h3 class="sous__titre__vignette">From shocking to daring, find out how Miley Cyrus 
                             became a feminist icon
                         </h3>
@@ -100,18 +100,18 @@
                 <p class="introduction__page__acceuil">See also<br> other articles here!</p>
                 <br>
                 <article>
-                    <a href="Comment_le_féminisme_a_t_il_trouvé_sa_place_dans_l_art.html">
+                    <a href="How_has_feminism_found_its_place_in_art_english.html">
                     <h2 class="titre__vignette">How has feminism found its place in art?</h2>
                     <img src="img/page_accueuil/Les_tirs.webp" alt="Tableau Les tirs par Niki de Saint Phalle"></a>
 
-                    <a href="Comment_le_féminisme_a_t_il_trouvé_sa_place_dans_l_art.html">
+                    <a href="How_has_feminism_found_its_place_in_art_english.html">
                         <h3 class="sous__titre__vignette"> Find out how women have managed to find their 
                             their place in art. After their many struggles
                         </h3>
                     </a>
                 </article>
 
-                <a href="Comment_le_féminisme_a_t_il_trouvé_sa_place_dans_l_art.html">
+                <a href="How_has_feminism_found_its_place_in_art_english.html">
                     <input class="en__lire__plus" value="Read more">
                 </a>
        
@@ -127,19 +127,19 @@
                 
 
                 <article>
-                    <a href="Le_combat_féministe_de_l_'_ombre.html">
+                    <a href="Elizabeth_Cady_Stanton_The_battle_of_the_shadows_english.html">
                         <h2 class="titre__vignette">Elizabeth Cady Stanton:<br> The Shadow Fight</h2>
                         <img src="img/page_accueuil/Elizabeth_Cady_Stanton.webp" alt="Elizabeth Cady Stanton">
                     </a>
 
-                    <a href="Le_combat_féministe_de_l_'_ombre.html">
+                    <a href="Elizabeth_Cady_Stanton_The_battle_of_the_shadows_english.html">
                         <h3 class="sous__titre__vignette"> Little known to all, he is responsible for a part of the feminist movement. 
                             feminist movement. Discover Elizabeth Cady Stanton
                         </h3>
                     </a>
                 </article>
 
-                <a href="Le_combat_féministe_de_l_'_ombre.html">
+                <a href="Elizabeth_Cady_Stanton_The_battle_of_the_shadows_english.html">
                     <input class="en__lire__plus" value="Read more">
                 </a>
 
