--- a/index_english.html
+++ b/index_english.html
@@ -79,7 +79,7 @@
                 <img class="arrow" src="img/design/arrow.jpg">
                 
                 <article> 
-                    <a  href="Miley_Cyrus_,_la_nouvelle_féministe.html">
+                    <a  href="Miley_Cyrus_ The_neo_feminist_english.html">
                         <h2 class="titre__vignette" >Miley Cyrus the neo-feminist<br> of musical art</h2>
                         <img  src="img/page_accueuil/Miley_Cyrus.webp" alt="Miley Cyrus" class="img2">
                     </a>
@@ -91,7 +91,7 @@
                     </a>
                 </article>
                 
-                <a href="Miley_Cyrus_,_la_nouvelle_féministe.html">
+                <a href="Miley_Cyrus_ The_neo_feminist_english.html">
                     <input class="en__lire__plus" value="Read more">
                 </a>
 
