--- a/Other_projects_english.html
+++ b/Other_projects_english.html
@@ -89,7 +89,7 @@
                             <img src="img/Caroussel_autres_projets/ilkay.png" />
                             <div class="card-content">
                                 <p>Education et les filles <br>de; contraire à complémentaire</p>
-                                <a href="" class="button__caroussel">Read more</a>
+                                <a href="https://education-et-filles.ilkaymenn.fr" class="button__caroussel">Read more</a>
                             </div>
                         </div>
                     </li>
@@ -119,7 +119,7 @@
                             <img src="img/Caroussel_autres_projets/jonas.png" />
                             <div class="card-content">
                                 <p>France<br> féminisme</p>
-                                <a href="#" class="button__caroussel">Read more</a>
+                                <a href="https://www.philippe-gallat.com" class="button__caroussel">Read more</a>
                             </div>
                         </div>
                     </li>
